# data-engineering-zoomcap

./: .gitignore
01-docker-terraform/: Dockerfile  homework.ipynb  homework.md  homework.py  pyproject.toml
02-workflow-orchestation/: docker-compose.yaml  homework.md
02-workflow-orchestation/flows/: 06_gcp_kv.yaml  07_gcp_setup.yaml  09_gcp_taxi_scheduled.yaml
03-data-warehouse/: homework.sql
04-analytics-engineering/taxi_rides_ny/: .gitignore  .user.yml  ingest_FHV.py  profiles.yml
04-analytics-engineering/taxi_rides_ny/models/marts/: dim_vendors.sql  dim_zones.sql
04-analytics-engineering/taxi_rides_ny/models/marts/reporting/: q3.sql  q4.sql  q5.sql
04-analytics-engineering/taxi_rides_ny/models/staging/: sources.yml  stg_fhv_tripdata.sql  stg_green_tripdata.sql  stg_yellow_tripdata.sql
